; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_create_systemtime.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_create_systemtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32)* @create_systemtime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_systemtime(%struct.TYPE_3__* noalias sret %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  store i32 %1, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @year_from_time(i32 %4)
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 7
  store i32 %5, i32* %6, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @month_from_time(i32 %7)
  %9 = add nsw i64 %8, 1
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 6
  store i64 %9, i64* %10, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @week_day(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 5
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @date_from_time(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @hour_from_time(i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @min_from_time(i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  store i32 %21, i32* %22, align 8
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @sec_from_time(i32 %23)
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @ms_from_time(i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  store i32 %27, i32* %28, align 8
  ret void
}

declare dso_local i32 @year_from_time(i32) #1

declare dso_local i64 @month_from_time(i32) #1

declare dso_local i32 @week_day(i32) #1

declare dso_local i32 @date_from_time(i32) #1

declare dso_local i32 @hour_from_time(i32) #1

declare dso_local i32 @min_from_time(i32) #1

declare dso_local i32 @sec_from_time(i32) #1

declare dso_local i32 @ms_from_time(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
